<resources>
    <string name="sign_in">SIGNIN</string>
    <string name="sign_up">SIGNUP</string>
    <string name="home">HOME</string>
    <string name="remember">Remember me</string>

    <string name="app_name">Trendy Craft Show</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="phone_number">Cell Phone (optional)</string>
    <string name="home_number">Home Phone (optional)</string>

    <string name="office_number">Office Number</string>
    <string name="emailid">Email</string>
    <string name="paypalemail">Paypal Email Id</string>
    <string name="companyname">    Comapany Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="total_sale">TOTAL SALE</string>
    <string name="member_since">MEMBER SINCE</string>


    <string name="current_password">Current password</string>

    <string name="new_password">New password</string>

    <string name="create_account">Create Account</string>
    <string name="payment_purchase">Payment Purchase</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="termsandcondition">Terms &amp; Conditions</string>
    <string name="change_photo">Change Photo</string>
    <string name="market_sale">Trendy Market Sale</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="inbox">Search</string>
    <string name="market_search">Market Search</string>
    <string name="post_advertisement">Post Advertisement </string>
    <string name="payment_method">Payment Method </string>
    <string name="my_sales">My Sales</string>
    <string name="wishlist">Wishlist </string>
    <string name="product_detail">Craft Show</string>
    <string name="business_search">Business Directory Search</string>
    <string name="send">SEND</string>
    <string name="forgot_password_label">Please enter your email address! You will receive a new temporary password.</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="forgot_pwd1">Forgot Password?</string>
    <string name="first_last_name">First and Last Name</string>
    <string name="company_name">Company Name</string>

    <string name="email_address">Email Address</string>
    <string name="confirm_password">Update Password</string>
    <string name="street_address">Street Address</string>
    <string name="address">Address</string>

    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip code</string>
    <string name="change_password">Change Password</string>

    <string name="confirmpassword">Confirm Password</string>
    <string name="entercode">Enter code here</string>
    <string name="Congragulations">Congratulations!!!</string>
    <string name="created">Your Account is Created Successfully!</string>
    <string name="fairs_festivels">FAIRS &amp; FESTIVALS</string>
    <string name="emailhasbeen">An email has been sent you with Activation Code</string>
    <string name="beforeyou">Before you start using Trendy Craft Show we need to verify your
email adress.</string>
    <string name="activation">Activation Code</string>
    <string name="terms">By signing up,  I accept the </string>
    <string name="privacy">Privacy Policies.</string>
    <string name="brief">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pretium felis sed lacus rhoncus, ultricies suscipit risus convallis.</string>

    <string-array name="spinner">
        <item>Choose State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District Of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Michigan</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="category">
        <item>Choose Category</item>
        <item>Craft Show </item>
        <item>Art Show </item>
        <item>Expo</item>
        <item>Fairs &amp; Festivals</item>
    </string-array>
    <string-array name="trendycat">
        <item>Choose Category</item>
        <item>Craft Only</item>
        <item>Art Only</item>
        <item>Direct Sale Only</item>
    </string-array>
    <string-array name="directory">
        <item>Choose Category</item>
        <item>Craft Only</item>
        <item>Art Only</item>
        <item>Direct Sale</item>
        <item>Promoters</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_business_card_list">BusinessCardList</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3059885303101854/5640983123</string>
</resources>
