<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@color/white">


        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_weight="1"
            android:visibility="visible"
            >
            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Karthik Dhanasekaran"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:gravity="center_horizontal"
                    android:background="@color/green"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />
                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:background="@drawable/avator"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/btnSelectPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_photo"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:gravity="center_horizontal"
                    android:background="@color/green"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                >




                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:hint="Email"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/cname"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:hint="@string/companyname"
                    android:gravity="center_vertical"

                    />

                <EditText
                    android:id="@+id/home_phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:hint="@string/home_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:gravity="center_vertical"

                    />

                <EditText

                    android:id="@+id/cell_phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:gravity="center_vertical"

                    />
                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:paddingTop="15dp"
                    android:hint="@string/address"
                    android:gravity="center_vertical"
                    android:textStyle="bold"

                    />

                <EditText
                    android:id="@+id/street_address"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:hint="@string/street_address"
                    android:gravity="center_vertical"

                    />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:hint="@string/city"
                    android:gravity="center_vertical"

                    />
                <Spinner
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:entries="@array/spinner"
                    android:textSize="17dp"
                    android:paddingLeft="2dp"
                    >

                </Spinner>
                <EditText
                    android:id="@+id/zip"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/zip"
                    android:layout_marginLeft="5dp"
                    android:inputType="number"
                    android:maxLength="5"
                    />
                <Button
                    android:id="@+id/change_psw_main"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/change_password"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp">
                    <Button
                        android:id="@+id/save_profile"
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/green"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"/>
                    <Button
                        android:id="@+id/cancel_profile"
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/green"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/change_psw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:paddingTop="20dp"
            >
            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/current_password"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:inputType="textPassword"

                />
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/new_password"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:inputType="textPassword"


                />
            <EditText
                android:id="@+id/conf_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/confirm_password"
                android:gravity="center_vertical"
                android:layout_marginBottom="45dp"
                android:inputType="textPassword"


                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp">
                <Button
                    android:id="@+id/confirm_password_sub"
                    android:layout_width="250dp"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/confirm_password"
                    android:textColor="@color/white"
                    android:background="@color/green"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
