<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hik.trendycraftshow.ForgotPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/signUpLayout">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffffff"
                >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00a05f"
    android:orientation="horizontal">
    <ImageButton
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="visible"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/back"
        />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/forgot_pwd"
                    android:textStyle="bold"
                    android:textSize="35dp"
                    android:layout_weight="1"
                    android:layout_marginRight="40dp"
                    android:textColor="#ffffff"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="#00a05f"
                    />

</LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password_label"
                            android:textColor="@color/black"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="30dp"
                            android:textSize="20dp"

                            android:gravity="center_horizontal"/>

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:layout_marginTop="20dp"
                                android:padding="15dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginLeft="10dp"
                                android:inputType="textEmailAddress"
                                android:hint="@string/email_address"
                                />

                        <Button
                            android:id="@+id/send"
                            android:layout_width="500dp"
                            android:layout_height="70dp"
                            android:padding="15dp"
                            android:textSize="25dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/send"
                            android:textColor="#ffffff"

                            android:layout_gravity="center"
                            android:textStyle="bold"
                            />


                    </LinearLayout>




                </LinearLayout>



    </LinearLayout>

</RelativeLayout>
